--- a/Season1.step_into_chatgpt/1.Transformer/transformer.ipynb
+++ b/Season1.step_into_chatgpt/1.Transformer/transformer.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -395,11 +395,38 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] ME(22316:26688,MainProcess):2024-03-04-16:19:09.514.608 [mindspore\\nn\\layer\\basic.py:173] For Dropout, this parameter `keep_prob` will be deprecated, please use `p` instead.\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "(1, 2, 10) (1, 5, 2, 2)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Tensor(shape=[1, 5, 2, 2], dtype=Float32, value=\n",
+       "[[[[ 5.00000000e-01,  5.00000000e-01],\n",
+       "   [ 5.00000000e-01,  5.00000000e-01]],\n",
+       "  [[ 5.00000000e-01,  5.00000000e-01],\n",
+       "   [ 5.00000000e-01,  5.00000000e-01]],\n",
+       "  [[ 5.00000000e-01,  5.00000000e-01],\n",
+       "   [ 5.00000000e-01,  5.00000000e-01]],\n",
+       "  [[ 5.00000000e-01,  5.00000000e-01],\n",
+       "   [ 5.00000000e-01,  5.00000000e-01]],\n",
+       "  [[ 5.00000000e-01,  5.00000000e-01],\n",
+       "   [ 5.00000000e-01,  5.00000000e-01]]]])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -408,7 +435,8 @@
     "attn_mask = Tensor([False]).broadcast_to((1, 2, 2))\n",
     "multi_head_attn = MultiHeadAttention(dmodel, dk, nheads)\n",
     "output, attn = multi_head_attn(q, k, v, attn_mask)\n",
-    "print(output.shape, attn.shape)"
+    "print(output.shape, attn.shape)\n",
+    "attn"
    ]
   },
   {
@@ -484,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -521,13 +549,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[WARNING] ME(22316:26688,MainProcess):2024-03-04-16:21:41.702.059 [mindspore\\nn\\layer\\basic.py:173] For Dropout, this parameter `keep_prob` will be deprecated, please use `p` instead.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2266,7 +2301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
