--- a/Season1.step_into_chatgpt/1.Transformer/transformer.ipynb
+++ b/Season1.step_into_chatgpt/1.Transformer/transformer.ipynb
@@ -1048,7 +1048,8 @@
     "mask1 = mask2 = Tensor([False]).broadcast_to((1, 2, 2))\n",
     "decoder_layer = DecoderLayer(4, 1, 16)\n",
     "output, attn1, attn2 = decoder_layer(x, y, mask1, mask2)\n",
-    "print(output.shape, attn1.shape, attn2.shape)"
+    "print(output.shape, attn1.shape, attn2.shape)\n",
+    "print(attn)"
    ]
   },
   {
